...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_footer" />

        <RelativeLayout
            android:id="@+id/layout_footer"
...
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="?textColorPrimary"
                android:textStyle="bold" />

            <org.akvo.caddisfly.widget.PageIndicatorView
                android:id="@+id/pager_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true" />

            <TextView
...
