...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.35">

            <ImageView
                android:id="@+id/imageBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:cropToPadding="false"
...
