...

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/navigate_up"
            android:onClick="onHomeClick"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_arrow_back" />
...
